Updating pipeline: business_student_overview Updating pipeline: master_party_core Updating pipeline: master_transaction_core Updating pipeline: raw_ga4_core Updating pipeline: raw_know_core

--- a/datafactory/pipeline/raw_know_core.json
+++ b/datafactory/pipeline/raw_know_core.json
@@ -1,6 +1,23 @@
 {
 	"name": "raw_know_core",
 	"properties": {
+		"activities": [
+			{
+				"name": "Set variable1",
+				"type": "SetVariable",
+				"dependsOn": [],
+				"userProperties": [],
+				"typeProperties": {
+					"variableName": "Demo",
+					"value": "Demo"
+				}
+			}
+		],
+		"variables": {
+			"Demo": {
+				"type": "String"
+			}
+		},
 		"folder": {
 			"name": "01_raw_source"
 		},
