--- a/datafactory/pipeline/raw_know_core.json
+++ b/datafactory/pipeline/raw_know_core.json
@@ -13,7 +13,7 @@
 				}
 			},
 			{
-				"name": "Copy data1",
+				"name": "Copy Data",
 				"type": "Copy",
 				"dependsOn": [],
 				"policy": {
