--- a/datafactory/pipeline/raw_know_core.json
+++ b/datafactory/pipeline/raw_know_core.json
@@ -143,6 +143,72 @@
 						}
 					}
 				]
+			},
+			{
+				"name": "Copy Badges",
+				"type": "Copy",
+				"dependsOn": [],
+				"policy": {
+					"timeout": "0.12:00:00",
+					"retry": 0,
+					"retryIntervalInSeconds": 30,
+					"secureOutput": false,
+					"secureInput": false
+				},
+				"userProperties": [],
+				"typeProperties": {
+					"source": {
+						"type": "DelimitedTextSource",
+						"storeSettings": {
+							"type": "FileServerReadSettings",
+							"recursive": true,
+							"enablePartitionDiscovery": false
+						},
+						"formatSettings": {
+							"type": "DelimitedTextReadSettings"
+						}
+					},
+					"sink": {
+						"type": "ParquetSink",
+						"storeSettings": {
+							"type": "AzureBlobFSWriteSettings"
+						},
+						"formatSettings": {
+							"type": "ParquetWriteSettings"
+						}
+					},
+					"enableStaging": false,
+					"translator": {
+						"type": "TabularTranslator",
+						"typeConversion": true,
+						"typeConversionSettings": {
+							"allowDataTruncation": true,
+							"treatBooleanAsNumber": false
+						}
+					}
+				},
+				"inputs": [
+					{
+						"referenceName": "ds_source_csv_pipe",
+						"type": "DatasetReference",
+						"parameters": {
+							"filename": "sk_badges.csv",
+							"appname": "sharedknow",
+							"objectname": "badges"
+						}
+					}
+				],
+				"outputs": [
+					{
+						"referenceName": "ds_target_parquet",
+						"type": "DatasetReference",
+						"parameters": {
+							"filename": "sk_badges.parquet",
+							"appname": "sharedknow",
+							"objectname": "badges"
+						}
+					}
+				]
 			}
 		],
 		"variables": {
