Updating dataflow: dataflow_sharedknow

--- a/datafactory/dataflow/dataflow_sharedknow.json
+++ b/datafactory/dataflow/dataflow_sharedknow.json
@@ -159,8 +159,7 @@
 				"     validateSchema: false,",
 				"     ignoreNoFilesFound: false,",
 				"     format: 'parquet') ~> Rawvotetypes",
-				"RawDataBadges derive(Id = toInteger(Id),",
-				"          column1 = ERROR_FUNCTION('')) ~> derivedColumn1",
+				"RawDataBadges derive(Id = toInteger(Id)) ~> derivedColumn1",
 				"derivedColumn1 sink(allowSchemaDrift: true,",
 				"     validateSchema: false,",
 				"     format: 'parquet',",
